# Green

./: README.md  git-install.txt  kazam-1.4.5.tar.gz.md5  sandbox  solus-sc_ja.po  編集中のドキュメント 1
debian-11-bullseye/DVD-1_setup.log/: firefox-plugin  leafpad_0.8.18.1-5_i386.deb
debian-11-bullseye/DVD-1_setup.log/installer/: order-of-screenshots.txt
github.io/: changelog-for-v040.txt  changelog-for-v050.txt  changelog-for-v060.txt  changelog-for-v070.txt
grsync/: ja_JP.mo  ja_JP.po
grsync/grsync-1.3.0/: AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  grsync.conf  grsync.desktop.in  grsync.glade  grsync.spec.in  grsync.xml.in  it.opbyte.grsync.service.in
grsync/grsync-1.3.0/po/: POTFILES.in  POTFILES.skip  ca_ES.po  cs_CZ.po  de_DE.po  el_GR.po  es_ES.po  fr_FR.po  gl_ES.po  hr_HR.po  hu_HU.po  id_ID.po  it_IT.po  nb_NO.po  nl_NL.po  pt_BR.po  pt_PT.po  ru_RU.po  sv_SE.po  tr_TR.po  zh_CN.po  zh_TW.po
grsync/grsync-1.3.0/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  main.c  support.h
ja-translation/: ja.mo  ja.po
kazam/: kazam-1.4.5.tar.gz.md5  readme.txt
kazam/ja-translation/: ja.mo  ja.po
menu/: ja.po
menu-l10n/: ja.mo  ja.po  menu-entries.pot  menu-l10n_0.20211120_all.deb
mxum/: about-deelp-translator.txt  diff.txt  mxum(1).txt  mxum.txt  what-is wwnum.txt
mxum/ja-translation/: readme.txt
oathtool/: oathtool-howto.txt
simutrans/Aub_save/: Aub_1915.sve  Aub_1925.sve  Aub_1931.sve  Aub_1933.sve  Aub_1934.sve  Aub_1937.sve  Aub_1938.sve  Aub_1939.sve  Aub_1941.sve  Aub_1943.sve  Aub_1946.sve  Aub_1952.sve  Aub_1953.sve  Aub_1954.sve  Aub_1958.sve  Aub_1962.sve  Aub_1963.sve  Aub_1964.sve  Aub_1966.sve  Aub_1967.sve  Aub_1970.sve  Aub_1971.sve  Aub_1973.sve  Aub_1974.sve  Aub_1975.sve  Aub_1976.sve  Aub_1977.sve  Aub_1979.sve  Aub_1983.sve  Aub_1988.sve  Aub_1989.sve  Aub_1990.sve  Aub_1993.sve  Aub_1995.sve  Aub_1996.sve  Aub_1997.sve  Aub_2000.sve  Aub_2004.sve  Aub_2006.sve  Aub_2008.sve  (+17 more)
simutrans/GameSaves/: PAK64Nippon_Start.sve  save-pak.japan.sve  save-pak.nippon.sve  save-pak128.sve
simutrans/SaveGames/: save-pak.japan-2.sve  save-pak.japan-3.sve  save-pak.nippon-2.sve  save-pak.nippon-3.sve  save-pak128-2.sve  save-pak128-3(beginners_mode).sve
simutrans/city_lists/: citylist_de.txt  citylist_ja.txt-old
simutrans/jp12pfont_v120/: m+10r.bdf  readme.txt
simutrans/logs/: simutrans-get_pak.sh.txt  simutrans-uni_install_logs(mx21).txt  simutrans-uni_loading_log(debian10).txt  simutrans_loading_logs(debian10).txt  simutrans_logs(debian10).txt
simutrans/pak.nippon/: citylist_en.txt  original-citylist_en.txt
solus/: brisk-menu.ja.po
stopwatch/: bugreport.txt
tegaki_recognize/: tefaki-howto..txt  tegaki-howto.txt
